src/styles/activity.scss
@import "../../../styles/general-styles";

.activity-row {
  @include row;
  background-color: $grid-even-background-color;
  border-bottom: 1px $border-color solid;
  min-height: 46px;
}


.activity-row:hover {
  background-color: $grid-hover-background-color;

  .ghost-icon {
    color: $icon-color;
  }
}


.selected-activity {
  background-color: $grid-selected-background-color;
}


.activity-container {
  margin-left: 4pt;
  padding: 4pt 8pt 8pt 8pt;
  border-left: 5px solid $primary-color;
  width: 100%;
}


.timeline-padding {
  width: 40px;
}


.activity-status {
  @include row;
  justify-content: space-between;
  font-size: 8pt;
  width: 98%;
}


.column {
  padding-right: 36px;
}


.right-column {
  justify-content: flex-end;
  padding-right: 8pt;
  text-align: right;
}


.activity-group-name {
  vertical-align: -webkit-baseline-bottom;
  font-size: 12pt;
  font-weight: 500;
  margin-top: 36px;
  margin-bottom: 2px;
  padding-left: 8px;
}


.activity-name {
  vertical-align: -webkit-baseline-middle;
  padding-right: 24pt;
  padding-bottom: 2pt;
  max-width: 98%;
  font-size: 10pt;
  font-weight: 400;
}


.activity-name a:hover {
  text-decoration: underline;
}


.activity-theme {
  @include expand;

  min-width: 200px;
  // max-width: 40%;
  padding-right: 36px;
}


.completed-activity {
  text-decoration-line: line-through;
}

